--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#093511",
-        "titleBar.activeBackground": "#0C4A18",
-        "titleBar.activeForeground": "#F3FDF5"
-    }
+    "liveServer.settings.port": 5501
 }
